[PLAT-6375] : jacobian matrix for exogenous curves are not used. (Marc) [PLAT-6368] : finite difference calculator bumping both issuer and inflation curve. (Marc) [PLAT-6362] : add a PresentValueCurveSensitivityDiscountingInflationCalculator using a curve object with issuer. (Marc) [PLAT-6361] : add a getInstance() in BondCapitalIndexedTransactionDiscountingMethod. (Marc)
Conflicts:
	projects/OG-Analytics/src/test/java/com/opengamma/analytics/financial/provider/description/MulticurveProviderDiscountDataSets.java